// SPDX-FileCopyrightText: 2024 Shun Sakai
//
// SPDX-License-Identifier: Apache-2.0 OR MIT

= Changelog
:toc: preamble
:project-url: https://github.com/sorairolake/rzopfli
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

== {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2024-07-29

=== Changed

* Avoid reading and writing data to `Vec<u8>` ({pull-request-url}/8[#8])

=== Removed

* Remove warnings for already compressed files ({pull-request-url}/18[#18])

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2024-07-22

=== Changed

* Change to create output file before compression ({pull-request-url}/5[#5])

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2024-07-22

=== Added

* Initial release