@@ -4,7 +4,7 @@
 
 = rzopfli(1)
 // Specify in UTC.
-:docdate: 2024-07-22
+:docdate: 2024-08-03
 :doctype: manpage
 ifdef::revnumber[:mansource: rzopfli {revnumber}]
 ifndef::revnumber[:mansource: rzopfli]
@@ -61,7 +61,7 @@ _FILE_::
 *-c*, *--stdout*::
 
   Write to standard output, keep original files. This option conflicts with
-  *--rm*.
+  *--rm* and *--suffix*.
 
 *-f*, *--force*::
 
@@ -77,6 +77,13 @@ _FILE_::
 
   Remove input files after successful compression. This option conflicts with
   *--stdout* and *--keep*.
+
+*-S*, *--suffix* _SUFFIX_::
+
+  Use _SUFFIX_ as the suffix for the target file instead of `.gz`, `.zlib`, or
+  `.deflate`. Any UTF-8 string can be specified as the suffix, but an
+  inappropriate value such as an empty string is deprecated. This option
+  conflicts with *--stdout*.
 
 *-i*, *--iteration* _TIMES_::
 
