@@ -14,6 +14,12 @@ All notable changes to this project will be documented in this file.
 The format is based on https://keepachangelog.com/[Keep a Changelog], and this
 project adheres to https://semver.org/[Semantic Versioning].
 
+== {compare-url}/v0.1.2\...HEAD[Unreleased]
+
+=== Added
+
+* Add option to change filename extension ({pull-request-url}/25[#25])
+
 == {compare-url}/v0.1.1\...v0.1.2[0.1.2] - 2024-07-29
 
 === Changed
